# modelium

./: .dockerignore  .gitignore  ARCHITECTURE_TRUE_ORCHESTRATION.md  CD_DISABLED.md  CLEANUP_SUMMARY.md  CURL_COMMANDS.md  DEPLOYMENT.md  DOCKER.md  DOCKER_BUILD_PUSH.md  DOCS_REWRITE_SUMMARY.md  Dockerfile  GITHUB_ACTIONS_FIX.md  GIT_READY.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  SIMPLE_ARCHITECTURE.md  STATUS.md  TESTING_GUIDE.md  TESTING_TOMORROW.md  TRUE_ORCHESTRATION_PROGRESS.md  docker-compose.yml  modelium.yaml  modelium.yaml.example  pyproject.toml  show_brain_prompt.py  test_modelium_docker.sh  test_modelium_venv.sh
.github/workflows/: cd.yml  cd.yml.disabled  ci.yml
configs/: README.md  enterprise-multi-workload.yaml  multi-instance-llms.yaml  multi-instance-vision.yaml  single-instance.yaml
docs/: MULTI_MODEL_GPU.md  README.md  architecture.md  brain.md  getting-started.md  testing.md  usage.md
examples/: 01_simple_usage.py  01_vllm_deployment.py  02_triton_deployment.py  03_multi_runtime.py  README.md  brain_demo.py  huggingface-model.py  quickstart.py  real_deployment_test.py  simple_api.py  simple_deployment.py  use_config.py
infra/helm/modelium/: Chart.yaml  values.yaml
infra/helm/modelium/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
infra/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  rbac.yaml  service.yaml
modelium/: __init__.py  cli.py  config.py  runtime_manager.py
modelium/brain/: __init__.py  prompts.py  unified_brain.py
modelium/connectors/: __init__.py  ray_connector.py  triton_connector.py  vllm_connector.py
modelium/converters/: __init__.py  onnx_converter.py  pytorch_converter.py  tensorrt_converter.py
modelium/core/: __init__.py  descriptor.py
modelium/core/analyzers/: __init__.py  framework_detector.py  huggingface_analyzer.py  model_analyzer.py  onnx_analyzer.py  pytorch_analyzer.py  security_scanner.py
modelium/executor/: Dockerfile  __init__.py  sandbox.py  validator.py
modelium/managers/: __init__.py  ray_manager.py  triton_manager.py  vllm_manager.py
modelium/metrics/: __init__.py  prometheus_exporter.py
modelium/modelium_llm/: __init__.py  dataset_schema.py  schemas.py
modelium/modelium_llm/prompts/: system_prompt.txt  user_prompt_template.txt
modelium/modelium_llm/server/: __init__.py  inference.py
modelium/modelium_llm/training/: __init__.py  dataset_schema.py  train.py
modelium/modelium_llm_server/: Dockerfile
modelium/repository/: __init__.py  model_repository.py
modelium/runtimes/: __init__.py  kserve.py  ray_serve.py  triton.py  vllm_runtime.py
modelium/services/: __init__.py  model_registry.py  model_watcher.py  orchestrator.py  vllm_service.py
monitoring/grafana/dashboards/: forge-overview.json  modelium-overview.json
monitoring/prometheus/: prometheus.yml
