[tool.poetry]
name = "modelium"
version = "0.1.0"
description = "Automated ML model ingestion, conversion, optimization, and deployment pipeline"
authors = ["Modelium Team <team@modelium.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://modelium.ai"
repository = "https://github.com/your-org/modelium"
keywords = ["ml", "model-serving", "triton", "tensorrt", "kubernetes"]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies (minimal install)
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
torch = "^2.1.0"
onnx = "^1.15.0"
numpy = "^1.26.0"
# CLI
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.extras]
# Optional runtime dependencies
vllm = ["vllm", "transformers"]
ray = ["ray[serve]", "aiohttp"]
tensorrt = ["tensorrt", "pycuda"]
triton = ["tritonclient[all]"]
# Optional cloud dependencies
aws = ["boto3"]
gcp = ["google-cloud-storage"]
azure = ["azure-storage-blob"]
# Full installation
all = ["vllm", "transformers", "ray[serve]", "aiohttp", "boto3", "kubernetes", "docker"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
ipython = "^8.17.2"
httpx = "^0.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.poetry.scripts]
modelium = "modelium.cli:app"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=modelium --cov-report=html --cov-report=term"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

