[tool.poetry]
name = "modelium"
version = "0.1.0"
description = "Automated ML model ingestion, conversion, optimization, and deployment pipeline"
authors = ["Modelium Team <team@modelium.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://modelium.ai"
repository = "https://github.com/your-org/modelium"
keywords = ["ml", "model-serving", "triton", "tensorrt", "kubernetes"]

[tool.poetry.dependencies]
python = "^3.12"
# Core dependencies - Latest stable versions (Nov 2025)
pydantic = "^2.10.0"
pyyaml = "^6.0.2"
torch = "^2.7.0"
onnx = "^1.18.0"
numpy = "^2.2.0"
# CLI
typer = "^0.15.0"
rich = "^13.9.0"
# API Server
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
# Optional dependencies (for extras)
# Note: vLLM should be installed separately: pip install vllm
transformers = {version = "^4.56.0", optional = true}
ray = {version = "^2.40.0", optional = true}
aiohttp = {version = "^3.11.0", optional = true}
tensorrt = {version = "^10.7.0", optional = true}
pycuda = {version = "^2024.1.2", optional = true}
tritonclient = {version = "^2.53.0", optional = true}
boto3 = {version = "^1.35.0", optional = true}
google-cloud-storage = {version = "^2.18.0", optional = true}
azure-storage-blob = {version = "^12.24.0", optional = true}
kubernetes = {version = "^31.0.0", optional = true}
docker = {version = "^7.2.0", optional = true}

[tool.poetry.extras]
# Optional runtime dependencies (vLLM installed separately)
llm = ["transformers"]
ray = ["ray", "aiohttp"]
tensorrt = ["tensorrt", "pycuda"]
triton = ["tritonclient"]
# Optional cloud dependencies
aws = ["boto3"]
gcp = ["google-cloud-storage"]
azure = ["azure-storage-blob"]
# Full installation (excludes vllm/tensorrt which are Linux+CUDA only)
all = ["transformers", "ray", "aiohttp", "boto3", "kubernetes", "docker"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
black = "^24.11.0"
ruff = "^0.8.0"
mypy = "^1.14.0"
ipython = "^8.31.0"
httpx = "^0.28.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[tool.poetry.scripts]
modelium = "modelium.cli:app"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=modelium --cov-report=html --cov-report=term"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

